--- a/locales/it.json
+++ b/locales/it.json
@@ -77,7 +77,7 @@
       "share_on_twitter": "Twitta su Twitter",
       "share_on_linkedin": "Condividi su LinkedIn",
       "swatch_options": "{{swatch_trigger}} opzioni per {{product_title}}",
-      "swatches_toggle": "Attiva / disattiva i campioni",
+      "swatches_toggle": "Attiva \/ disattiva i campioni",
       "nav_product_thumbnail": "miniatura",
       "product_zoom_dialog": "Finestra di dialogo dello zoom del prodotto"
     },
@@ -141,7 +141,7 @@
       "icon_zoom": "Ingrandimento"
     },
     "cross_sell": {
-      "title_html": "Add-on consigliato: <span class=\"cross-sell__product-title\">{{ product }}</span>"
+      "title_html": "Add-on consigliato: <span class=\"cross-sell__product-title\">{{ product }}<\/span>"
     }
   },
   "header": {
@@ -154,7 +154,7 @@
   "footer": {
     "general": {
       "copyright_html": "Copyright © {{ year }} {{ shop_name }}.",
-      "copyright_credit_html": "<a href=\"https://www.pixelunion.net/\">Tema Superstore di Pixel Union</a>.",
+      "copyright_credit_html": "<a href=\"https:\/\/www.pixelunion.net\/\">Tema Superstore di Pixel Union<\/a>.",
       "follow_us": "Seguici"
     }
   },
@@ -196,9 +196,9 @@
       "cart_empty": "Il carrello  è vuoto",
       "stock_limit": "È possibile avere solo {{ quantity }} {{ title }} nel proprio carrello.",
       "tax_and_shipping": "Le tasse e la spedizione sono calcolate al checkout",
-      "taxes_and_shipping_policy_at_checkout_html": "Tasse e <a href=\"{{ link }}\">spedizione</a> calcolata al checkout",
+      "taxes_and_shipping_policy_at_checkout_html": "Tasse e <a href=\"{{ link }}\">spedizione<\/a> calcolata al checkout",
       "taxes_included_but_shipping_at_checkout": "Tassa inclusa e spedizione calcolata al checkout",
-      "taxes_included_and_shipping_policy_html": "Tasse incluse. <a href=\"{{ link }}\">spedizione</a> calcolata al checkout."
+      "taxes_included_and_shipping_policy_html": "Tasse incluse. <a href=\"{{ link }}\">spedizione<\/a> calcolata al checkout."
     },
     "shipping": {
       "calculate_shipping": "Calcola spedizioni",
@@ -398,7 +398,7 @@
     "general": {
       "by_vendor": "da {{ vendor }}",
       "by_vendor_html": "da {{ vendor_link }}",
-      "sku_html": "<strong>SKU</strong> <span data-product-sku>{{ sku }}",
+      "sku_html": "<strong>SKU<\/strong> <span data-product-sku>{{ sku }}",
       "related_products_title": "Prodotti attinenti",
       "customer_reviews_title": "Recensioni clienti",
       "zoom": "Fare clic o scorrere per ingrandire",
@@ -415,8 +415,8 @@
       "price": {
         "original": "Prezzo originale",
         "current": "Prezzo attuale",
-        "range_html": "<span class=\"price--label\">da</span> {{ price }}",
-        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} / {{ unit_measure }}",
+        "range_html": "<span class=\"price--label\">da<\/span> {{ price }}",
+        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} \/ {{ unit_measure }}",
         "tax_line_html": " "
       }
     },
