--- a/locales/da.json
+++ b/locales/da.json
@@ -133,7 +133,7 @@
       "icon_zoom": "Zoom"
     },
     "cross_sell": {
-      "title_html": "Foreslået add-on: <span class=\"cross-sell__product-title\">{{ product }}</span>"
+      "title_html": "Foreslået add-on: <span class=\"cross-sell__product-title\">{{ product }}<\/span>"
     }
   },
   "header": {
@@ -146,7 +146,7 @@
   "footer": {
     "general": {
       "copyright_html": "Ophavsret © {{ year }} {{ shop_name }}.",
-      "copyright_credit_html": "<a href=\"https://www.pixelunion.net/\">Superstore-tema af Pixel Union</a>.",
+      "copyright_credit_html": "<a href=\"https:\/\/www.pixelunion.net\/\">Superstore-tema af Pixel Union<\/a>.",
       "follow_us": "Følg os"
     }
   },
@@ -188,9 +188,9 @@
       "cart_empty": "Din vogn er tom",
       "stock_limit": "Du kan kun have {{ quantity }} {{ title }} i din vogn.",
       "tax_and_shipping": "Skatter og forsendelse beregnet ved kassen",
-      "taxes_and_shipping_policy_at_checkout_html": "Skatter og <a href=\"{{ link }}\">fragt</a> beregnet ved kassen",
+      "taxes_and_shipping_policy_at_checkout_html": "Skatter og <a href=\"{{ link }}\">fragt<\/a> beregnet ved kassen",
       "taxes_included_but_shipping_at_checkout": "Skat inkluderet og forsendelse beregnet ved kassen",
-      "taxes_included_and_shipping_policy_html": "Skat inkluderet. <a href=\"{{ link }}\">fragt</a> beregnet ved kassen."
+      "taxes_included_and_shipping_policy_html": "Skat inkluderet. <a href=\"{{ link }}\">fragt<\/a> beregnet ved kassen."
     },
     "shipping": {
       "calculate_shipping": "Udregn levering",
@@ -232,7 +232,7 @@
       "password": "Adgangskode",
       "repeat_password": "Gentag adgangskode",
       "phone": "Telefon",
-      "province": "Stat/provins",
+      "province": "Stat\/provins",
       "set_default": "Sæt som standard",
       "submit": "Indsend",
       "zip": "Postnummer"
@@ -390,7 +390,7 @@
     "general": {
       "by_vendor": "ved {{ vendor }}",
       "by_vendor_html": "ved {{ vendor_link }}",
-      "sku_html": "<strong>SKU</strong> <span data-product-sku>{{ sku }}",
+      "sku_html": "<strong>SKU<\/strong> <span data-product-sku>{{ sku }}",
       "related_products_title": "Relaterede produkter",
       "customer_reviews_title": "Kundeanmeldelser",
       "zoom": "Klik eller rul for at zoome",
@@ -407,8 +407,8 @@
       "price": {
         "original": "Oprindelige pris",
         "current": "Nuværende pris",
-        "range_html": "<span class=\"price--label\">fra</span> {{ price }}",
-        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} / {{ unit_measure }}",
+        "range_html": "<span class=\"price--label\">fra<\/span> {{ price }}",
+        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} \/ {{ unit_measure }}",
         "tax_line_html": " "
       }
     },
