--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -26,7 +26,7 @@
       "submit_button_label": "Update language"
     },
     "cross_sell": {
-      "title_html": "Suggested add-on: <span class=\"cross-sell__product-title\">{{ product }}</span>"
+      "title_html": "Suggested add-on: <span class=\"cross-sell__product-title\">{{ product }}<\/span>"
     },
     "breadcrumbs": {
       "home": "Home",
@@ -154,7 +154,7 @@
   "footer": {
     "general": {
       "copyright_html": "Copyright &copy; {{ year }} {{ shop_name }}.",
-      "copyright_credit_html": "<a href=\"https://www.pixelunion.net/\">Superstore Theme by Pixel Union</a>.",
+      "copyright_credit_html": "<a href=\"https:\/\/www.pixelunion.net\/\">Superstore Theme by Pixel Union<\/a>.",
       "follow_us": "Follow us"
     }
   },
@@ -196,16 +196,16 @@
       "cart_empty": "Your cart is empty",
       "stock_limit": "You can only have {{ quantity }} {{ title }} in your cart.",
       "tax_and_shipping": "Taxes and shipping calculated at checkout",
-      "taxes_and_shipping_policy_at_checkout_html": "Taxes and <a href=\"{{ link }}\">shipping</a> calculated at checkout",
+      "taxes_and_shipping_policy_at_checkout_html": "Taxes and <a href=\"{{ link }}\">shipping<\/a> calculated at checkout",
       "taxes_included_but_shipping_at_checkout": "Tax included and shipping calculated at checkout",
-      "taxes_included_and_shipping_policy_html": "Tax included. <a href=\"{{ link }}\">Shipping</a> calculated at checkout."
+      "taxes_included_and_shipping_policy_html": "Tax included. <a href=\"{{ link }}\">Shipping<\/a> calculated at checkout."
     },
     "shipping": {
       "calculate_shipping": "Calculate Shipping",
       "hide_shipping_calculator": "Hide shipping calculator",
       "country": "Country",
       "province": "Province",
-      "zip": "Zip / Postal Code",
+      "zip": "Zip \/ Postal Code",
       "calculating": "Calculating",
       "multiple_rates": "We found {{ number_of_rates }} shipping rates available for {{ address }}, starting at {{ rate }}.",
       "one_rate": "We found one shipping rate available for {{ address }}.",
@@ -240,10 +240,10 @@
       "password": "Password",
       "repeat_password": "Repeat password",
       "phone": "Phone",
-      "province": "State/Province",
+      "province": "State\/Province",
       "set_default": "Set default",
       "submit": "Submit",
-      "zip": "Zip/Postal Code"
+      "zip": "Zip\/Postal Code"
     },
     "account": {
       "title": "My Account",
@@ -398,7 +398,7 @@
     "general": {
       "by_vendor": "by {{ vendor }}",
       "by_vendor_html": "by {{ vendor_link }}",
-      "sku_html": "<strong>SKU</strong> <span data-product-sku>{{ sku }}",
+      "sku_html": "<strong>SKU<\/strong> <span data-product-sku>{{ sku }}",
       "related_products_title": "Related products",
       "customer_reviews_title": "Customer Reviews",
       "zoom": "Click to expand",
@@ -418,8 +418,8 @@
       "price": {
         "original": "Original Price",
         "current": "Current Price",
-        "range_html": "<span class=\"price--label\">from</span> {{ price }}",
-        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} / {{ unit_measure }}",
+        "range_html": "<span class=\"price--label\">from<\/span> {{ price }}",
+        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} \/ {{ unit_measure }}",
         "tax_line_html": " "
       }
     },
