--- a/locales/es.json
+++ b/locales/es.json
@@ -141,7 +141,7 @@
       "icon_zoom": "Zoom"
     },
     "cross_sell": {
-      "title_html": "Agregado sugerido: <span class=\"cross-sell__product-title\">{{ product }}</span>"
+      "title_html": "Agregado sugerido: <span class=\"cross-sell__product-title\">{{ product }}<\/span>"
     }
   },
   "header": {
@@ -154,7 +154,7 @@
   "footer": {
     "general": {
       "copyright_html": "Propiedad artística © {{ year }} {{ shop_name }}.",
-      "copyright_credit_html": "<a href=\"https://www.pixelunion.net/\">Tema Superstore de Pixel Union</a>.",
+      "copyright_credit_html": "<a href=\"https:\/\/www.pixelunion.net\/\">Tema Superstore de Pixel Union<\/a>.",
       "follow_us": "Síganos"
     }
   },
@@ -196,9 +196,9 @@
       "cart_empty": "Su carrito está vacío",
       "stock_limit": "Solo puede tener {{ quantity }} {{ title }} en su carrito.",
       "tax_and_shipping": "Impuestos y envío calculados en el pago.",
-      "taxes_and_shipping_policy_at_checkout_html": "Impuestos y <a href=\"{{ link }}\">envío</a> calculado en la caja",
+      "taxes_and_shipping_policy_at_checkout_html": "Impuestos y <a href=\"{{ link }}\">envío<\/a> calculado en la caja",
       "taxes_included_but_shipping_at_checkout": "Impuesto incluido y envío calculado al finalizar la compra.",
-      "taxes_included_and_shipping_policy_html": "Impuesto incluido. <a href=\"{{ link }}\">envío</a> calculado en la caja."
+      "taxes_included_and_shipping_policy_html": "Impuesto incluido. <a href=\"{{ link }}\">envío<\/a> calculado en la caja."
     },
     "shipping": {
       "calculate_shipping": "Calcular el envío",
@@ -240,7 +240,7 @@
       "password": "Contraseña",
       "repeat_password": "Repetir contraseña",
       "phone": "Teléfono",
-      "province": "Estado / Provincia",
+      "province": "Estado \/ Provincia",
       "set_default": "Establecer predeterminada",
       "submit": "Enviar",
       "zip": "Código postal"
@@ -398,7 +398,7 @@
     "general": {
       "by_vendor": "por {{ vendor }}",
       "by_vendor_html": "por {{ vendor_link }}",
-      "sku_html": "<strong>SKU</strong> <span data-product-sku>{{ sku }}",
+      "sku_html": "<strong>SKU<\/strong> <span data-product-sku>{{ sku }}",
       "related_products_title": "Productos relacionados",
       "customer_reviews_title": "Reseñas de clientes",
       "zoom": "Haga clic o desplácese para acercar",
@@ -415,8 +415,8 @@
       "price": {
         "original": "Precio original",
         "current": "Precio actual",
-        "range_html": "<span class=\"price--label\">desde</span> {{ price }}",
-        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} / {{ unit_measure }}",
+        "range_html": "<span class=\"price--label\">desde<\/span> {{ price }}",
+        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} \/ {{ unit_measure }}",
         "tax_line_html": " "
       }
     },
