--- a/locales/fr.json
+++ b/locales/fr.json
@@ -141,7 +141,7 @@
       "icon_zoom": "Zoom"
     },
     "cross_sell": {
-      "title_html": "Add-on suggéré: <span class=\"cross-sell__product-title\">{{ product }}</span>"
+      "title_html": "Add-on suggéré: <span class=\"cross-sell__product-title\">{{ product }}<\/span>"
     }
   },
   "header": {
@@ -154,7 +154,7 @@
   "footer": {
     "general": {
       "copyright_html": "Droits d'auteur © {{ year }} {{ shop_name }}.",
-      "copyright_credit_html": "<a href=\"https://www.pixelunion.net/\">Thème Superstore par Pixel Union</a>.",
+      "copyright_credit_html": "<a href=\"https:\/\/www.pixelunion.net\/\">Thème Superstore par Pixel Union<\/a>.",
       "follow_us": "Suivez-nous"
     }
   },
@@ -196,9 +196,9 @@
       "cart_empty": "Votre panier est vide",
       "stock_limit": "Vous n'avez que {{ quantity }} {{ title }} dans votre panier.",
       "tax_and_shipping": "Taxes et expédition calculés à la caisse",
-      "taxes_and_shipping_policy_at_checkout_html": "Taxes et <a href=\"{{ link }}\">expédition</a> calculé à la caisse",
+      "taxes_and_shipping_policy_at_checkout_html": "Taxes et <a href=\"{{ link }}\">expédition<\/a> calculé à la caisse",
       "taxes_included_but_shipping_at_checkout": "Taxe incluse et expédition calculée à la caisse",
-      "taxes_included_and_shipping_policy_html": "Taxe inclu. <a href=\"{{ link }}\">Expédition</a> calculée à la caisse."
+      "taxes_included_and_shipping_policy_html": "Taxe inclu. <a href=\"{{ link }}\">Expédition<\/a> calculée à la caisse."
     },
     "shipping": {
       "calculate_shipping": "Calculer les frais d'envoi",
@@ -240,7 +240,7 @@
       "password": "Mot de passe",
       "repeat_password": "Répéter le mot de passe",
       "phone": "Téléphone",
-      "province": "Département/Région",
+      "province": "Département\/Région",
       "set_default": "Définir la valeur par défaut",
       "submit": "Soumettre",
       "zip": "Code postal"
@@ -398,7 +398,7 @@
     "general": {
       "by_vendor": "par {{ vendor }}",
       "by_vendor_html": "par {{ vendor_link }}",
-      "sku_html": "<strong>UGC</strong> <span data-product-sku>{{ sku }}",
+      "sku_html": "<strong>UGC<\/strong> <span data-product-sku>{{ sku }}",
       "related_products_title": "Produits liés",
       "customer_reviews_title": "Commentaires des clients",
       "zoom": "Cliquez ou faites défiler pour zoomer",
@@ -415,8 +415,8 @@
       "price": {
         "original": "Prix d'origine",
         "current": "Prix actuel",
-        "range_html": "<span class=\"price--label\">à partir de</span> {{ price }}",
-        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} / {{ unit_measure }}",
+        "range_html": "<span class=\"price--label\">à partir de<\/span> {{ price }}",
+        "price_per_unit_html": "{{ total_quantity }} | {{ unit_price }} \/ {{ unit_measure }}",
         "tax_line_html": " "
       }
     },
